--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -131,6 +131,10 @@
     width: 115px;
 }
 
+.unread-conversation{
+    font-size: 16px;
+}
+
 /* Rounded avatars */
 .senderAvt {
     height: 50px;
@@ -438,4 +442,5 @@ input[type=number]::-webkit-outer-spin-button {
     width: 270px;
 }
 
-​
+​.addTicket{
+}
