--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -177,7 +177,7 @@
 
             <section class="col-lg-3" style="padding: 0px">
                 <div
-                     style="padding-bottom: 5px; text-align:center; background-color: white; padding-top: 5px; border: 1px solid lightgray">
+                        style="padding-bottom: 5px; text-align:center; background-color: white; padding-top: 5px; border: 1px solid lightgray">
                     <div class="btn-group pull-right" style="margin-right: 20px" data-toggle="modal"
                          data-target="#filter-page-modal">
                         <a class="btn btn-default" style="border-radius: 0px">
@@ -191,7 +191,8 @@
                             style="border-radius:0px; margin-left: 20px"><span class="fa fa-search"></span> &nbsp;Search
                     </button>
                     <div class="btn-group" style="margin-left: 5px">
-                        <a class="btn btn-default" onclick="postListCurPage=1;getAllPosts(listPageFilter,postListCurPage)"
+                        <a class="btn btn-default"
+                           onclick="refreshConversations();"
                            style="border-radius: 100px">
                             <i class="fa fa-refresh"></i>
 
@@ -200,9 +201,9 @@
                 </div>
                 <div class="collapse" id="search-box" style="padding: 10px">
                     <div class="input-group">
-                        <input type="text" class="form-control" value="" id="txtSearchPost"
-                               placeholder="Search by message content"/>
-                        <span class="input-group-addon" onclick="findPostByContent(listPageFilter)"> <i
+                        <input type="text" class="form-control" value="" id="txtSearchConversation"
+                               placeholder="Search Messenger"/>
+                        <span id="btn-search-conversation" class="input-group-addon" onclick="searchConversation()"> <i
                                 class="fa fa-search"></i></span>
                     </div>
                 </div>
@@ -218,10 +219,14 @@
             <!--Cot o giua. Noi dung chat-->
             <div class="col-md-6 cmtbox" id="conversation"
                  style=" background-color: inherit;">
+
                 <div style="border-bottom: 1px; height: 5%; text-align: center">
                     <h4 id="currentSenderName">Teen</h4>
+                    <div id="conversation-content-loading-icon" class="hidden"><i
+                            class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></div>
                 </div>
-                <ul class="chat" id="conversationContent" style="overflow: scroll; height: 80vh; margin-left: 10px; margin-right: 10px">
+                <ul class="chat" id="conversationContent"
+                    style="overflow: scroll; height: 80vh; margin-left: 10px; margin-right: 10px">
 
                 </ul>
                 <div style="position: fixed; bottom: 10px;" id="conversationReply">
@@ -230,7 +235,7 @@
                                value="" autofocus/>
                     </div>
                     <div class="col-md-2">
-                        <button id="btnReply" class="btn btn-primary" onclick="" autofocus>Reply</button>
+                        <button id="btnReply" class="btn btn-primary" onclick="sendMessage();" autofocus>Reply</button>
                     </div>
                 </div>
             </div>
@@ -239,7 +244,8 @@
             <div class="col-md-3" id="customer-info" style="background-color: white; max-height: 90vh">
                 <div class="col-md-3 box box-primary" class="">
                     <div class="box-body box-profile">
-                        <img style="height: 200px;width: 200px" id="customer-picture" class="profile-user-img img-responsive img-circle" src="" alt="User profile picture">
+                        <img style="height: 200px;width: 200px" id="customer-picture"
+                             class="profile-user-img img-responsive img-circle" src="" alt="">
 
                         <h1 id="customer-name" class="customer-username text-center"></h1>
                         <ul class="list-group list-group-unbordered">
@@ -255,12 +261,17 @@
                             <li class="list-group-item">
                                 <b>Gender</b> <a id="customer-gender" class="pull-right"></a>
                             </li>
-                            <li class="list-group-item">
-                                <b>Note</b> <a id="customer-note" class="pull-right"></a>
-                            </li>
+                            <form>
+                                <li class="list-group-item">
+                                    <b>Note</b> <a onmouseover="showForm(this);" onmouseout="hideForm(this);"
+                                                   id="customer-note"
+                                                   class="pull-right"></a>
+                                </li>
+                                <button id="testbtn" class="hidden" value="Add">Add</button>
+                            </form>
                         </ul>
 
-                        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+                        <!--<a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>-->
                     </div>
                     <!-- /.box-body -->
                 </div>
@@ -270,6 +281,9 @@
         </section>
     </div>
 
+
 </div>
+
+
 </body>
 </html>
