User management for Brand
Somethi

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -109,7 +109,7 @@
             </li>
             <!--Manage Brand -->
             <li class="treeview">
-                <a href="/brand/index">
+                <a href="/brand/user">
                     <i class="fa fa-users"></i>
                     <span>User Management</span>
                     <span class="pull-right-container">
