--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -99,12 +99,52 @@
         $.ajax({
             url: '/user/switchActive',
             type: "GET",
-            async: false,
+
             data: {userId: userId}
         });
 
         location.reload();
 
+    }
+
+    function checkUsername(username) {
+        $.ajax({
+            url: '/user/checkExistedUsername',
+            type: "GET",
+            dataType: 'json',
+            data: {username: username},
+            success: function (data) {
+                if (data == true) {
+                    $('#checkUserIcon').show();
+                    $('#username').attr({
+                        'title': 'Username existed',
+                        "data-toggle": "tooltip",
+                        "data-placement": "right",
+                        "style": "border:1px solid red"
+                    });
+
+                }
+                else {
+                    $('#checkUserIcon').hide();
+                    $('#username').removeAttr('title');
+                    $('#username').removeAttr('data-toggle');
+                    $('#username').removeAttr('data-placement');
+                    $('#username').removeAttr('style');
+                }
+            }
+        });
+    }
+
+    function checkRetypePassword() {
+        if ($('#password-retype').val() == $('#password').val()) {
+            $('#checkReypeIcon').hide();
+            $('#password-retype').removeAttr("style");
+        }
+        else {
+            $('#checkReypeIcon').show();
+            $('#password-retype').attr("style", "border:1px solid red");
+
+        }
     }
 </script>
 
@@ -128,7 +168,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="person: ${listUser}" style="cursor: pointer" data-toggle="modal" data-target="#myModal"
+                <tr th:each="person: ${listUser}" style="cursor: pointer" data-toggle="modal"
+                    data-target="#userDetailModal"
                     th:onclick="'getUserDetail('+${person.userid}+')'">
                     <td th:text="${person.userid}" class="col-md-1"></td>
                     <td th:text="${person.username}"></td>
@@ -152,10 +193,10 @@
                 </tbody>
             </table>
 
-            <button class="btn btn-primary">Add user</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#addUserModal">Add user</button>
         </div>
     </section>
-    <div id="myModal" class="modal fade" role="dialog">
+    <div id="userDetailModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -200,6 +241,77 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div id="addUserModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <form class="form-horizontal">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Add new user</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="username">Username</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="username" placeholder="Enter username"
+                                       onblur="checkUsername($('#username').val())">
+                                <a class="glyphicon glyphicon-remove form-control-feedback"
+                                   style="margin-right: 10px;color: red; display: none" id="checkUserIcon"></a>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Gender</label>
+                            <div class="col-sm-9">
+                                <label class="radio-inline"><input type="radio" name="optradio" checked>Male</label>
+                                <label class="radio-inline"><input type="radio" name="optradio">Female</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="firstname">Firstname</label>
+                            <div class="col-sm-3"  style="padding-right: 0px">
+                                <input type="text" class="form-control" id="firstname" placeholder="Enter firstname">
+                            </div>
+                            <label class="control-label col-sm-2" for="lastname">Lastname</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" id="lastname" placeholder="Enter lastname">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="password">Password</label>
+                            <div class="col-sm-9">
+                                <input type="password" class="form-control" id="password" placeholder="Enter password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="password-retype">Retype password</label>
+                            <div class="col-sm-9">
+                                <input onblur="checkRetypePassword()" type="password" class="form-control"
+                                       id="password-retype" placeholder="Retype password">
+                                <a class="glyphicon glyphicon-remove form-control-feedback"
+                                   style="margin-right: 10px;color: red; display: none" id="checkReypeIcon"></a>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="email">Email</label>
+                            <div class="col-sm-9">
+                                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Create</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
 </div>
