--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -7,7 +7,9 @@
     <aside class="main-sidebar" th:include="SideBar::aside"></aside>
 
     <script src="/js/customercare.js"></script>
+    <script src="/js/mini-messenger.js"></script>
     <link rel="stylesheet" th:href="@{/css/scc-post.css}"/>
+    <link rel="stylesheet" href="/css/mini-messenger.css">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
