--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -231,7 +231,7 @@
                 </ul>
                 <div style="position: fixed; bottom: 10px;" id="conversationReply">
                     <div class="col-md-10">
-                        <input style="width: 450px" class="form-control" type="text" id="replyText" name="replyText"
+                        <input style="width: 450px" class="form-control" type="text" placeholder="Type a message..." id="replyText" name="replyText"
                                value="" autofocus/>
                     </div>
                     <div class="col-md-2">
@@ -250,7 +250,7 @@
                         <h1 id="customer-name" class="customer-username text-center"></h1>
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item">
-                                <b>Facebook Id</b> <a id="customer-facebook-id" class="pull-right"></a>
+                                <b>Link Facebook</b> <a id="customer-facebook-id" class="pull-right" target="_blank"></a>
                             </li>
                             <li class="list-group-item">
                                 <b>Locale</b> <a id="customer-locale" class="pull-right"></a>
@@ -267,7 +267,7 @@
                                                    id="customer-note"
                                                    class="pull-right"></a>
                                 </li>
-                                <button id="testbtn" class="hidden" value="Add">Add</button>
+                                <button id="testbtn" style="display: none" value="Add">Add</button>
                             </form>
                         </ul>
 
