Update Add button icon

--- a/scc-mvc/src/main/resources/templates/crawl-page/index.html
+++ b/scc-mvc/src/main/resources/templates/crawl-page/index.html
@@ -55,7 +55,7 @@
                     </tr>
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add page to
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"> <span class="fa fa-plus" style="margin-right: 8px"></span>Add page to
                     crawl
                 </button>
             </div>
