--- a/scc-mvc/src/main/resources/templates/facebook-account/index.html
+++ b/scc-mvc/src/main/resources/templates/facebook-account/index.html
@@ -59,7 +59,7 @@
                 </table>
 
                 <div>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"> <span class="fa fa-plus" style="margin-right: 8px"></span>Add
                         Facebook account
                     </button>
                 </div>
