--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -200,7 +200,10 @@
                 </tbody>
             </table>
 
-            <button class="btn btn-primary" data-toggle="modal" data-target="#addUserModal">Add user</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#addUserModal"><span class="fa fa-plus"
+                                                                                                  style="margin-right: 8px"></span>Add
+                user
+            </button>
         </div>
     </section>
     <div id="userDetailModal" class="modal fade" role="dialog">
