lỗi giao diện trên màn hd

--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -444,3 +444,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 ​.addTicket{
 }
+
+
+.active {
+    background-color: lightskyblue;
+    color: black;
+}
