Khi add 1 page để manage thì tiến hành đăng ký page đó vs webhook

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -62,12 +62,12 @@
                 </a>
             </li>
 
-            <li class="header" style="text-align: center">PAGE AND ACCOUNT</li>
+            <li class="header" style="text-align: center">FACEBOOK PAGE & ACCOUNT</li>
             <!--Manage Page -->
             <li class="treeview">
                 <a href="/page/index">
                     <i class="fa fa-facebook-official "></i>
-                    <span>Manage Page Account</span>
+                    <span>Manage Page</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
@@ -87,7 +87,7 @@
             <li class="treeview">
                 <a href="/facebook-account/index">
                     <i class="fa fa-facebook"></i>
-                    <span>Manage FB Account</span>
+                    <span>Manage Account</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
