--- a/scc-mvc/src/main/resources/templates/page/index.html
+++ b/scc-mvc/src/main/resources/templates/page/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
-    <title>Manage page</title>
+    <title>Manage Facebook pages</title>
     <header class="main-header" th:include="Head::header"></header>
     <aside class="main-sidebar" th:include="SideBar::aside"> </aside>
 </head>
@@ -16,10 +16,10 @@
             <div id="pageToManage" style="margin-top: 10px;margin-bottom: 10px;margin-left: 10px; background-color: white; padding: 10px 20px 20px 20px">
 
                 <div style="text-align: left; margin-bottom: 20px">
-                    <h2>Manage Facebook page account</h2>
+                    <h2>Manage Facebook pages</h2>
                 </div >
 
-                *Note: All page account here can be used by Brand's staff
+                *Note: All pages here can receives post and comment update, message
                 <table class="table table-hover" style="background-color: white">
                     <thead style="border-top: 1px solid lightgray">
                     <tr>
