--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -218,7 +218,7 @@
 
             <!--Cot o giua. Noi dung chat-->
             <div class="col-md-6 cmtbox" id="conversation"
-                 style=" background-color: inherit;">
+                 style=" background-color: inherit; overflow: hidden">
 
                 <div style="border-bottom: 1px solid white; height: 5%; text-align: center">
                     <h4 id="currentSenderName">Teen</h4>
@@ -226,12 +226,12 @@
                             class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></div>
                 </div>
                 <ul class="chat" id="conversationContent"
-                    style="overflow: scroll; height: 630px; margin-left: 10px; margin-right: 10px">
+                    style="overflow: scroll; height: 540px; margin-left: 10px; margin-right: 10px">
 
                 </ul>
-                <div style="position: fixed; bottom: 0px; background-color: white; padding: 20px 22px 10px 0px" id="conversationReply">
+                <div style="position: fixed; bottom: 0px; background-color: white; padding: 10px 0px 10px 0px; margin-left: 0px" id="conversationReply">
                     <div class="col-md-10">
-                        <input style="width: 450px" class="form-control" type="text" placeholder="Type a message..." id="replyText" name="replyText"
+                        <input style="width: 440px" class="form-control" type="text" placeholder="Type a message..." id="replyText" name="replyText"
                                value="" autofocus/>
                     </div>
                     <div class="col-md-2">
@@ -244,16 +244,16 @@
             <div class="col-md-3" id="customer-info" style="background-color: white; max-height: 90vh">
                 <div class="col-md-3 box box-primary" class="">
                     <div class="box-body box-profile">
-                        <img style="height: 200px;width: 200px" id="customer-picture"
+                        <img style="height: 150px;width: 150px" id="customer-picture"
                              class="profile-user-img img-responsive img-circle" src="" alt="">
 
                         <h1 id="customer-name" class="customer-username text-center"></h1>
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item">
-                                <b>Link Facebook</b> <a id="customer-facebook-id" class="pull-right" target="_blank"></a>
+                                <b>Profile</b> <a id="customer-facebook-id" class="pull-right" target="_blank"></a>
                             </li>
                             <li class="list-group-item">
-                                <b>Locale</b> <a id="customer-locale" class="pull-right"></a>
+                                <b>Language</b> <a id="customer-locale" class="pull-right"></a>
                             </li>
                             <li class="list-group-item">
                                 <b>Timezone</b> <a id="customer-timezone" class="pull-right"></a>
