sửa giao diện mess

--- a/scc-mvc/src/main/resources/templates/crawl-page/index.html
+++ b/scc-mvc/src/main/resources/templates/crawl-page/index.html
@@ -78,9 +78,9 @@
                                     <input type="hidden" name="pageAccessToken" id="pageAccessToken" value=""/>
                                     <input type="hidden" name="pageName" id="pageName" value=""/>
                                     <div>
-                                        <input class="form-control" type="text" name="pageId" id="pageId" value=""
-                                               required="true"/>
-                                        <button class="btn btn-primary" type="button" onclick="addPageToCrawl()">Add
+                                        <input class="form-control col-md-2" type="text" name="pageId" id="pageId" value=""
+                                               required="true" placeholder="Example: https://www.facebook.com/mobile.word/"/>
+                                        <button class="btn btn-primary col-md-2" type="button" onclick="addPageToCrawl()">Add
                                         </button>
                                     </div>
                                 </form>
