--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -220,8 +220,8 @@
             <div class="col-md-6 cmtbox" id="conversation"
                  style=" background-color: inherit; overflow: hidden">
 
-                <div style="border-bottom: 1px solid white; height: 5%; text-align: center">
-                    <h4 id="currentSenderName">Teen</h4>
+                <div class="header-customer-name">
+                    <div id="currentSenderName">Teen</div>
                     <div id="conversation-content-loading-icon" class="hidden"><i
                             class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></div>
                 </div>
