--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -82,7 +82,6 @@
 }
 
 .chat li.left .chat-body {
-    margin-left: 10px;
     background-color: white;
     padding: 5px 10px 5px 5px;
     border-radius: 5px;
@@ -121,6 +120,7 @@
     height: 30px;
     width: 30px;
     border-radius: 3px;
+    margin-right: 10px;
 }
 
 .conversation-sender-name {
@@ -447,4 +447,22 @@ input[type=number]::-webkit-outer-spin-button {
 .active {
     background-color: lightskyblue;
     color: black;
+}
+
+.header-customer-name {
+    border-bottom: 1px solid white;
+    height: 46px;
+    text-align: center;
+    background-color: white;
+    padding-top: 10px;
+}
+
+#currentSenderName{
+    font-size: 20px;
+}
+
+.link_class {
+    display:inline-block;
+    width:100%;
+    height:100%;
 }
