--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -8,8 +8,10 @@
 
     <script src="/js/customercare.js"></script>
     <script src="/js/mini-messenger.js"></script>
+    <script src="/js/popup-messenger.js"></script>
     <link rel="stylesheet" th:href="@{/css/scc-post.css}"/>
     <link rel="stylesheet" href="/css/mini-messenger.css">
+    <link rel="stylesheet" href="/css/popup-messenger.css">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
