--- a/scc-mvc/src/main/resources/templates/messenger/messengertest.html
+++ b/scc-mvc/src/main/resources/templates/messenger/messengertest.html
@@ -1,121 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
     <title>Facebook Style Popup Design</title>
-    <style>
-        @media only screen and (max-width : 540px)
-        {
-            .chat-sidebar
-            {
-                display: none !important;
-            }
-
-            .chat-popup
-            {
-                display: none !important;
-            }
-        }
-
-        body
-        {
-            background-color: #e9eaed;
-        }
-
-        .chat-sidebar
-        {
-            width: 200px;
-            position: fixed;
-            height: 100%;
-            right: 0px;
-            top: 0px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            border: 1px solid rgba(29, 49, 91, .3);
-        }
-
-        .sidebar-name
-        {
-            padding-left: 10px;
-            padding-right: 10px;
-            margin-bottom: 4px;
-            font-size: 12px;
-        }
-
-        .sidebar-name span
-        {
-            padding-left: 5px;
-        }
-
-        .sidebar-name a
-        {
-            display: block;
-            height: 100%;
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .sidebar-name:hover
-        {
-            background-color:#e1e2e5;
-        }
-
-        .sidebar-name img
-        {
-            width: 32px;
-            height: 32px;
-            vertical-align:middle;
-        }
-
-        .popup-box
-        {
-            display: none;
-            position: fixed;
-            bottom: 0px;
-            right: 220px;
-            height: 285px;
-            background-color: rgb(237, 239, 244);
-            width: 300px;
-            border: 1px solid rgba(29, 49, 91, .3);
-        }
-
-        .popup-box .popup-head
-        {
-            background-color: #6d84b4;
-            padding: 5px;
-            color: white;
-            font-weight: bold;
-            font-size: 14px;
-            clear: both;
-        }
-
-        .popup-box .popup-head .popup-head-left
-        {
-            float: left;
-        }
-
-        .popup-box .popup-head .popup-head-right
-        {
-            float: right;
-            opacity: 0.5;
-        }
-
-        .popup-box .popup-head .popup-head-right a
-        {
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .popup-box .popup-messages
-        {
-            height: 100%;
-            overflow-y: scroll;
-        }
-
-
-
-    </style>
 
     <script>
         //this function can remove a array element.
@@ -199,7 +87,22 @@
             element = element + '<div class="popup-head-right"><a href="javascript:close_popup(\''+ id +'\');">&#10005;</a></div>';
             element = element + '<div style="clear: both"></div></div><div class="popup-messages"></div></div>';
 
-            document.getElementsByTagName("body")[0].innerHTML = document.getElementsByTagName("body")[0].innerHTML + element;
+            var element2 =
+                    '<div class="popup-box chat-popup" id="'+ id +'">' +
+                    '<div class="popup-head">' +
+                    '<div class="popup-head-left">'+ name +'</div>'+
+                    '<div class="popup-head-right"><a href="javascript:close_popup(\''+ id +'\');">&#10005;</a></div>'+
+                    '<div style="clear: both"></div></div><div class="popup-messages">' +
+                    '<div id="message">'+
+                    '<div class="div-popup-sender-avt" >' +
+                    '<img class="popup-sender-avt" src="https://scontent.xx.fbcdn.net/v/t1.0-1/13886456_686981624787425_1934763867833077960_n.jpg?oh=f1d6c4d676eda9d4844d1fb383cf62fe&oe=58C04AC6"></div>' +
+                    '<div class="popup-sender-message"><span>Message content</span></div>' +
+                    '</div>'+
+                    '</div></div>';
+
+
+
+            document.getElementsByTagName("body")[0].innerHTML = document.getElementsByTagName("body")[0].innerHTML + element2;
 
             popups.unshift(id);
 
@@ -231,6 +134,7 @@
         window.addEventListener("load", calculate_popups);
 
     </script>
+    <link rel="stylesheet" href="/css/popup-messenger.css">
 </head>
 <body>
 <div class="chat-sidebar">
