Front end check comment is ticket

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -242,7 +242,7 @@
                         <h4 class="modal-title">Tickets in the system</h4>
                     </div>
                     <div class="modal-body" id="ticket-list">
-                        <div class="ticket-row" >
+                        <div class="ticket-row">
                             <div class="ticket">
                                 <div class="title process">Thái độ nhân viên
                                     tệ
@@ -416,15 +416,18 @@
                     </div>
                     <div class="col-lg-1" style="padding-right: 15px;">
                         <div style="margin: 0;" class="pull-right">
-                            <div style="border-bottom: 1px solid lightgray">
+                            <div style="border-bottom: 1px solid lightgray; margin-bottom: 2px">
+                                <span class="fa fa-smile-o happy"></span>
                                 <div id="happy-count" style="text-align: center">0</div>
-                                <span class="fa fa-smile-o happy"></span></div>
-                            <div style="border-bottom: 1px solid lightgray">
+                            </div>
+                            <div style="border-bottom: 1px solid lightgray; margin-bottom: 2px">
+                                <span class="fa fa-question-circle-o question"></span>
                                 <div id="question-count" style="text-align: center">0</div>
-                                <span class="fa fa-question-circle-o question"></span></div>
+                            </div>
                             <div>
+                                <span class="fa fa fa-frown-o sad"></span>
                                 <div id="sad-count" style="text-align: center">0</div>
-                                <span class="fa fa fa-frown-o sad"></span></div>
+                            </div>
                         </div>
                     </div>
 
